# mymodel_tests

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/: main.py  types.py  validate.py
tests/: test_init_created.py  test_set_get.py  test_validation.py
