[tool.poetry]
name = "mymodel-tests"
version = "0.1.0"
description = ""
authors = ["Yurii Motov <yurii.motov.monte@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
