[tool.poetry]
name = "mymodel-tests"
version = "0.1.0"
description = ""
authors = ["Yurii Motov <yurii.motov.monte@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pytest = "^8.3.4"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]